default/objects/Contact_Relationship_Type__c/Contact_Relationship_Type__c.object-meta.xml
<CustomObject>
    <label>Relationship Type</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>