default/objects/Contact_Relationship_Type__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>The color of the Relationship Line in the RGB format #AABBCC</description>
    <inlineHelpText>The color of the Relationship Line in the RGB format #AABBCC</inlineHelpText>
    <label>Line Color</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>