default/objects/Contact_Relationship_Type__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Default Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>