default/objects/Contact_Relationship_Type__c/fields/Label_Editable__c.field-meta.xml
<CustomField>
    <fullName>Label_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want the users to be able to change the default label when they draw or edit a relationship of this Relationship Line Type</description>
    <inlineHelpText>Check this if you want the users to be able to change the default label when they draw or edit a relationship of this Relationship Line Type</inlineHelpText>
    <label>Label Editable</label>
    <type>Checkbox</type>
</CustomField>