default/objects/Contact_Relationship_Type__c/fields/Used_in_all_account_plans__c.field-meta.xml
<CustomField>
    <fullName>Used_in_all_account_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used in all Account Plans</label>
    <type>Checkbox</type>
</CustomField>