default/objects/Contact_Relationship_Type__c/fields/Used_in_all_relationship_maps__c.field-meta.xml
<CustomField>
    <fullName>Used_in_all_relationship_maps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used in all Relationship Maps</label>
    <type>Checkbox</type>
</CustomField>